--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,47 +1,167 @@
-aiohttp==3.9.5
+absl-py==2.1.0
+agora_token_builder==1.0.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
 aiohttp-retry==2.8.3
-aiosignal==1.3.1
+aioice==0.9.0
+aiortc==1.10.1
+aiosignal==1.3.2
 asgiref==3.8.1
-attrs==23.2.0
-certifi==2024.2.2
+astunparse==1.6.3
+asyncio==3.4.3
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
+av==13.1.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+boto3==1.37.19
+botocore==1.37.19
+Brotli==1.1.0
+cachetools==5.5.0
+certifi==2024.12.14
+cffi==1.17.1
+channels==4.2.0
+channels_redis==4.2.1
 chardet==5.2.0
-charset-normalizer==3.3.2
-contourpy==1.2.1
-cycler==0.12.1
-Django==5.0.6
+charset-normalizer==3.4.0
+click==8.1.8
+constantly==23.10.4
+coverage==5.5
+cryptography==44.0.0
+cssselect2==0.7.0
+daphne==4.1.2
+deepface==0.0.93
+deprecation==2.1.0
+distlib==0.3.8
+dj-rest-auth==7.0.0
+Django==5.1.4
+django-allauth==65.3.0
+django-autocomplete-light==3.11.0
+django-channels==0.7.0
+django-cors-headers==4.6.0
+django-environ==0.12.0
+django-extensions==3.2.3
+django-filter==24.3
+django-redis==5.4.0
+django-rest-framework==0.1.0
+django-storages==1.14.5
+django_csp==3.8
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+dnspython==2.7.0
 et-xmlfile==1.1.0
+eyed3==0.9.7
+filelock==3.13.1
+filetype==1.2.0
+fire==0.7.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+flatbuffers==25.2.10
 fonttools==4.53.0
-frozenlist==1.4.1
-idna==3.7
-Jinja2==3.1.4
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-multidict==6.0.5
-numpy==1.26.4
-openpyxl==3.1.3
-packaging==24.0
-pandas==2.2.2
-pillow==10.3.0
-psycopg==3.1.19
-psycopg2-binary==2.9.9
-PyJWT==2.8.0
-pyparsing==3.1.2
+frozenlist==1.5.0
+gast==0.6.0
+gdown==5.2.0
+git-filter-repo==2.38.0
+google-auth==2.37.0
+google-crc32c==1.6.0
+google-pasta==0.2.0
+grpcio==1.70.0
+gunicorn==23.0.0
+h5py==3.13.0
+html5lib==1.1
+hyperlink==21.0.0
+idna==3.10
+ifaddr==0.2.0
+incremental==24.7.2
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jmespath==1.0.1
+joblib==1.4.2
+keras==3.8.0
+libclang==18.1.1
+lz4==4.4.3
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+msgpack==1.1.0
+mtcnn==1.0.0
+multidict==6.1.0
+mutagen==1.47.0
+namex==0.0.8
+ndg-httpsclient==0.5.1
+numpy==2.0.2
+oauthlib==3.2.2
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+platformdirs==4.1.0
+propcache==0.3.0
+protobuf==5.29.3
+psycopg2-binary==2.9.10
+pusher==3.3.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydyf==0.10.0
+pyee==12.1.1
+Pygments==2.19.1
+pygraphviz==1.14
+PyJWT==2.10.1
+pylibsrtp==0.11.0
+PyNaCl==1.5.0
+pyOpenSSL==25.0.0
+pyphen==0.15.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
-pytz==2024.1
-PyYAML==6.0.1
+python-dotenv==1.0.1
+python-http-client==3.3.7
+pytz==2024.2
 razorpay==1.4.2
+redis==5.2.1
 reportlab==4.2.0
 requests==2.32.3
-setuptools==70.0.0
-six==1.16.0
-sqlparse==0.5.0
-tornado==6.4
-twilio==9.1.0
-typing_extensions==4.12.0
-tzdata==2024.1
-urllib3==2.2.1
+requests-oauthlib==2.0.0
+retina-face==0.0.17
+rich==13.9.4
+rsa==4.9
+s3transfer==0.11.4
+sendgrid==6.11.0
+service-identity==24.2.0
+setuptools==75.8.0
+six==1.17.0
+soupsieve==2.6
+sqlparse==0.5.3
+starkbank-ecdsa==2.2.0
+stripe==9.7.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+termcolor==2.5.0
+tf_keras==2.18.0
+tinycss2==1.3.0
+toml==0.10.2
+tqdm==4.67.1
+twilio==9.0.5
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+virtualenv==20.25.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
 XlsxWriter==3.2.0
-xyzservices==2024.4.0
-yarl==1.9.4
+yarl==1.18.3
+zope.interface==7.2
+zopfli==0.2.3
