--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,7 +1,7 @@
-# Use an official Python image
+# Use official Python image
 FROM python:3.11-slim
 
-# Set environment variables
+# Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
@@ -9,8 +9,16 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update \
-    && apt-get install -y gcc libpq-dev python3-dev
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    python3-dev \
+    graphviz \
+    libgraphviz-dev \
+    pkg-config \
+    netcat-openbsd \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 COPY requirements.txt .
@@ -23,8 +31,12 @@ COPY . .
 # Collect static files
 RUN python manage.py collectstatic --noinput
 
-# Port the container listens to
+# Copy entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Expose port
 EXPOSE 8000
 
-# Start the Django app
-CMD ["gunicorn", "project.wsgi:application", "--bind", "0.0.0.0:8000"]
+# Set entrypoint
+ENTRYPOINT ["/entrypoint.sh"]
